Hide headless toggle

--- a/frontend/public/try.html
+++ b/frontend/public/try.html
@@ -24,7 +24,7 @@
       <a href="#" id="startover" class="button" tabindex="-1">Start over &#10226;</a>
       <a href="#" id="reportLink" class="button" target="lh-report" tabindex="-1">Open report &#10147;</a>
     </div>
-    <div class="useheadless-setting">
+    <div class="useheadless-setting hidden">
       <label><input type="checkbox" id="useheadless"> Use Headless Chrome</label>
     </div>
   </div>
